--- a/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
+++ b/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
@@ -1,4 +1,4 @@
-<f:if condition="{configuration.insertAbove}">
+<!-- <f:if condition="{configuration.insertAbove}">
 	<f:render section="paginator" arguments="{pagination: pagination}" />
 </f:if>
 
@@ -49,4 +49,49 @@
 			</li>
 		</f:if>
 	</ul>
+</f:section> -->
+
+<f:if condition="{configuration.insertAbove}">
+	<f:render section="paginator" arguments="{pagination: pagination}" />
+</f:if>
+
+<f:renderChildren arguments="{contentArguments}" />
+
+<f:if condition="{configuration.insertBelow}">
+	<f:render section="paginator" arguments="{pagination: pagination}" />
+</f:if>
+
+<f:section name="paginator">
+	<f:if condition="{pagination.numberOfPages} > 1">
+	<div class="page-navigation">
+		
+		<div class="main-bottom pagination caps">
+			<strong>News:</strong>
+			<span class="active-filter active-filter-first">Date</span>
+			|<span class="active-filter">Division</span>
+			|<span class="active-filter">Another</span>
+			
+			<span class="arrows">
+				<f:if condition="{pagination.previousPage}">
+					<f:if condition="{pagination.previousPage} > 1">
+						<f:then>
+							<f:widget.link class="leftArrow" arguments="{currentPage: pagination.previousPage}"></f:widget.link>
+						</f:then>
+						<f:else>
+							<f:widget.link class="leftArrow"> </f:widget.link>
+						</f:else>
+					</f:if>
+				</f:if>
+				
+				<span class="caps">Page</span> <span class="bigger">{pagination.current}</span> <em>of</em> <span class="bigger">{pagination.numberOfPages}</span>
+				
+				<f:if condition="{pagination.nextPage}">
+						<f:widget.link class="rightArrow" arguments="{currentPage: pagination.nextPage}"> </f:widget.link>
+				</f:if>
+				
+			</span>
+		</div>
+		
+	</div>
+	</f:if>
 </f:section>
