--- a/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
+++ b/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
@@ -1,56 +1,3 @@
-<!-- <f:if condition="{configuration.insertAbove}">
-	<f:render section="paginator" arguments="{pagination: pagination}" />
-</f:if>
-
-<f:renderChildren arguments="{contentArguments}" />
-
-<f:if condition="{configuration.insertBelow}">
-	<f:render section="paginator" arguments="{pagination: pagination}" />
-</f:if>
-
-<f:section name="paginator">
-	<ul class="f3-widget-paginator">
-		<f:if condition="{pagination.previousPage}">
-			<li class="previous">
-				<f:if condition="{pagination.previousPage} > 1">
-					<f:then>
-						<f:widget.link arguments="{currentPage: pagination.previousPage}">previous</f:widget.link>
-					</f:then>
-					<f:else>
-						<f:widget.link>previous</f:widget.link>
-					</f:else>
-				</f:if>
-			</li>
-		</f:if>
-		<f:for each="{pagination.pages}" as="page">
-			<f:if condition="{page.isCurrent}">
-				<f:then>
-					<li class="current">
-						<span>{page.number}</span>
-					</li>
-				</f:then>
-				<f:else>
-					<li>
-						<f:if condition="{page.number} > 1">
-							<f:then>
-								<f:widget.link arguments="{currentPage: page.number}">{page.number}</f:widget.link>
-							</f:then>
-							<f:else>
-								<f:widget.link>{page.number}</f:widget.link>
-							</f:else>
-						</f:if>
-					</li>
-				</f:else>
-			</f:if>
-		</f:for>
-		<f:if condition="{pagination.nextPage}">
-			<li class="next">
-				<f:widget.link arguments="{currentPage: pagination.nextPage}">next</f:widget.link>
-			</li>
-		</f:if>
-	</ul>
-</f:section> -->
-
 <f:if condition="{configuration.insertAbove}">
 	<f:render section="paginator" arguments="{pagination: pagination}" />
 </f:if>
@@ -63,13 +10,34 @@
 
 <f:section name="paginator">
 	<f:if condition="{pagination.numberOfPages} > 1">
-	<div class="page-navigation">
+	<div class="pagination">
+		<div class="pagination">
+			<ul>
+				<f:if condition="{pagination.previousPage} > 1">
+					<f:then>
+						<li><f:widget.link class="leftArrow" arguments="{currentPage: pagination.previousPage}">Prev</f:widget.link></li>
+					</f:then>
+					<f:else>
+						<li class="disabled"><f:widget.link class="leftArrow" arguments="{currentPage: pagination.previousPage}">Prev</f:widget.link></li>
+					</f:else>
+				</f:if>
+				<li class="active"><a href="#">1</a></li>
+				<li><a href="#">2</a></li>
+				<li><a href="#">3</a></li>
+				<li><a href="#">4</a></li>
+				<li>
+					<f:if condition="{pagination.nextPage}">
+						<f:widget.link class="rightArrow" arguments="{currentPage: pagination.nextPage}">Next</f:widget.link>
+					</f:if>
+				</li>
+			</ul>
+		</div>
 		
 		<div class="main-bottom pagination caps">
-			<strong>News:</strong>
-			<span class="active-filter active-filter-first">Date</span>
-			|<span class="active-filter">Division</span>
-			|<span class="active-filter">Another</span>
+			<!-- <strong>News:</strong>
+						<span class="active-filter active-filter-first">Date</span>
+						|<span class="active-filter">Division</span>
+						|<span class="active-filter">Another</span> -->
 			
 			<span class="arrows">
 				<f:if condition="{pagination.previousPage}">
@@ -84,10 +52,6 @@
 				</f:if>
 				
 				<span class="caps">Page</span> <span class="bigger">{pagination.current}</span> <em>of</em> <span class="bigger">{pagination.numberOfPages}</span>
-				
-				<f:if condition="{pagination.nextPage}">
-						<f:widget.link class="rightArrow" arguments="{currentPage: pagination.nextPage}"> </f:widget.link>
-				</f:if>
 				
 			</span>
 		</div>
