add nextNext and previousPrevious page options to paginate controller

--- a/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
+++ b/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
@@ -22,8 +22,8 @@
 					</f:else>
 				</f:if>
 				<li class="active"><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
+				<li><a href="#">{pagination.nextPage}</a></li>
+				<li><a href="#">{pagination.nextNextPage}</a></li>
 				<li><a href="#">4</a></li>
 				<li>
 					<f:if condition="{pagination.nextPage}">
