[FEATURE] Creating new BE module for overriding email templates

--- a/Resources/Private/Layouts/Backend.html
+++ b/Resources/Private/Layouts/Backend.html
@@ -10,8 +10,11 @@
 
 	<div class="typo3-fullDoc">
 		<div id="typo3-docheader">
-			<div id="typo3-docheader-row1"></div>
+			<div id="typo3-docheader-row1">
+				<f:render section="menu-secondary" optional="1" />
+			</div>
 			<div id="typo3-docheader-row2">
+				<f:render section="menu-primary" optional="1" />
 			</div>
 		</div>
 		<div id="typo3-docbody">
