[FEATURE] Updating BE module for overriding email templates, works now

--- a/Resources/Private/Templates/EmailTemplate/Edit.html
+++ b/Resources/Private/Templates/EmailTemplate/Edit.html
@@ -4,21 +4,23 @@
 
 <f:section name="main">
 
-			<f:form action="update" name="emailTemplate" object="{emailTemplate}">
+	<h3>Editing Template for "{emailTemplate.templateKey}"</h3>
 
-				<div class="field">
-					<label><f:form.checkbox property="isDraft" value="yes" /> Is draft version?</label>
-				</div>
+	<f:form action="update" name="emailTemplate" object="{emailTemplate}">
 
-				<div class=field">
-					<label>Email Body</label>
-					<f:form.textarea property="body" />
-				</div>
+		<div class="field">
+			<label><f:form.checkbox property="isDraft" value="yes" /> Is draft version?</label>
+		</div>
 
-				<div class="field">
-					<f:form.submit value="Save Email Template" />
-				</div>
-			</f:form>
+		<div class=field">
+			<label>Email Body</label>
+			<f:form.textarea property="body" />
+		</div>
+
+		<div class="field">
+			<f:form.submit value="Save Email Template" />
+		</div>
+	</f:form>
 
 
 </f:section>
