--- a/Resources/Private/Templates/EmailTemplate/List.html
+++ b/Resources/Private/Templates/EmailTemplate/List.html
@@ -46,5 +46,5 @@
 </f:section>
 
 <f:section name="menu-primary">
-	<f:be.buttons.icon uri="{f:uri.action(action:'new')}" icon="actions-document-new" title="Create New Email Template" />
+	<f:be.buttons.icon uri="{f:uri.action(action:'selectTemplate')}" icon="actions-document-new" title="Create New Email Template" />
 </f:section>
