[FEATURE] Letting users delete email templates. Added flashes

--- a/Resources/Private/Layouts/Backend.html
+++ b/Resources/Private/Layouts/Backend.html
@@ -19,6 +19,9 @@
 		</div>
 		<div id="typo3-docbody">
 			<div id="typo3-inner-docbody">
+
+				<f:flashMessages renderMode="div" />
+
 				<f:render section="main"/>
 			</div>
 		</div>
