--- a/Resources/Private/Templates/EmailTemplate/Edit.html
+++ b/Resources/Private/Templates/EmailTemplate/Edit.html
@@ -24,3 +24,9 @@
 
 
 </f:section>
+
+<f:section name="menu-primary">
+	<f:link.action action="delete" arguments="{emailTemplate: emailTemplate}">
+		<f:be.buttons.icon icon="actions-edit-delete" title="Delete this Email Template" />
+	</f:link.action>
+</f:section>
