--- a/Resources/Private/Templates/EmailTemplate/List.html
+++ b/Resources/Private/Templates/EmailTemplate/List.html
@@ -8,15 +8,18 @@
 		<tbody>
 			<tr class="c-table-row-spacer">
 				<td nowrap="nowrap" class="col-icon"><img src="clear.gif" width="1" height="8" alt=""></td>
+				<td nowrap="nowrap" class="col-icon"><img src="clear.gif" width="1" height="8" alt=""></td>
 				<td nowrap="nowrap" class="" colspan="4"></td>
 			</tr>
 			<!-- Element, begin: -->
 			<tr class="t3-row-header">
 				<td nowrap="nowrap" class="col-icon"></td>
+				<td nowrap="nowrap" class="col-icon"></td>
 				<td nowrap="nowrap" class="" colspan="4"><span class="c-table">Email Template</span> ({f:count(subject:templates)})</td>
 			</tr>
 			<!-- Element, begin: -->
 			<tr class="c-headLine">
+				<td nowrap="nowrap" class="col-icon"></td>
 				<td nowrap="nowrap" class="col-icon"></td>
 
 				<td nowrap="nowrap" class="col-title"><strong>Corresponding Template Key</strong></td>
@@ -33,10 +36,18 @@
 						</f:link.action>
 					</td>
 
+					<td nowrap="nowrap" class="col-icon">
+						<f:link.action action="delete" arguments="{emailTemplate: template}">
+							<f:be.buttons.icon icon="actions-edit-delete" title="Delete this template" />
+						</f:link.action>
+					</td>
+
 					<td nowrap="nowrap" class="col-title">{template.templateKey}</td>
 					<td nowrap="nowrap" class="">&nbsp;</td>
 					<td nowrap="nowrap" class="">{f:if(condition:template.isDraft, then: 'Yes', else: 'No')}</td>
-					<td nowrap="nowrap" class="">{template.body}</td>
+					<td nowrap="nowrap" class="">
+						<f:format.crop maxCharacters="50">{template.body}</f:format.crop>
+					</td>
 				</tr>
 			</f:for>
 
