[CHORE] Adding some styles/js & codemirror

--- a/Resources/Private/Templates/EmailTemplate/Edit.html
+++ b/Resources/Private/Templates/EmailTemplate/Edit.html
@@ -1,21 +1,14 @@
-<f:layout name="Backend" />
+<f:layout name="EmailTemplate" />
 
 {namespace c = CIC\Cicbase\ViewHelpers}
 
 <f:section name="main">
 
-	<h3>Editing Template for "{emailTemplate.templateKey}"</h3>
+	<h3 class="uppercase">Editing Template for "{emailTemplate.templateKey}"</h3>
 
 	<f:form action="update" name="emailTemplate" object="{emailTemplate}">
 
-		<div class="field">
-			<label><f:form.checkbox property="isDraft" value="yes" /> Is draft version?</label>
-		</div>
-
-		<div class=field">
-			<label>Email Body</label>
-			<f:form.textarea property="body" />
-		</div>
+		<f:render partial="EmailTemplate/Fields" arguments="{_all}" />
 
 		<div class="field">
 			<f:form.submit value="Save Email Template" />
