--- a/Resources/Private/Partials/EmailTemplate/Fields.html
+++ b/Resources/Private/Partials/EmailTemplate/Fields.html
@@ -4,7 +4,7 @@
 
 <div class="field">
 	<label>Email Subject</label>
-	<p>Email subjects are static string that do no marker replacement. Please enter the subject exactly as it should appear in the email.</p>
+	<p>Email subjects are static strings that do no marker replacement. Please enter the subject exactly as it should appear in the email.</p>
 	<f:if condition="{emailTemplate.subject}">
 		<f:then>
 			<f:form.textfield property="subject" style="width:600px" />
