[B] Fix email template module for 7.6

--- a/Resources/Private/Layouts/EmailTemplate.html
+++ b/Resources/Private/Layouts/EmailTemplate.html
@@ -5,8 +5,8 @@
 	loadExtJs="false"
 	loadExtJsTheme="false"
 	enableExtJsDebug="false"
-	addCssFile="{f:uri.resource(path: 'Styles/backend.css')}"
-	addJsFile="{f:uri.resource(path: 'Scripts/backend.js')}">
+	includeCssFiles="{0:\"{f:uri.resource(path: 'Styles/backend.css')}\"}"
+	includeJsFiles="{0:\"{f:uri.resource(path: 'Scripts/backend.js')}\"}">
 
 	<link rel="stylesheet" href="{f:uri.resource(path: 'Vendor/CodeMirror/codemirror.css')}" />
 
