[U] Remove deprecated renderMode attribute from flashMessages

--- a/Resources/Private/Layouts/EmailTemplate.html
+++ b/Resources/Private/Layouts/EmailTemplate.html
@@ -23,7 +23,7 @@
 		<div id="typo3-docbody">
 			<div id="typo3-inner-docbody">
 
-				<f:flashMessages renderMode="div" />
+				<f:flashMessages />
 
 				<div class="tx-cicbase-module">
 					<f:render section="main"/>
