--- a/Resources/Private/Templates/EmailTemplate/Edit.html
+++ b/Resources/Private/Templates/EmailTemplate/Edit.html
@@ -19,7 +19,7 @@
 </f:section>
 
 <f:section name="menu-primary">
-	<f:link.action action="delete" arguments="{emailTemplate: emailTemplate}">
-		<f:be.buttons.icon icon="actions-edit-delete" title="Delete this Email Template" />
+	<f:link.action action="delete" arguments="{emailTemplate: emailTemplate}" title="Delete this Email Template">
+		<core:icon identifier="actions-edit-delete" />
 	</f:link.action>
 </f:section>
