--- a/Resources/Private/Templates/EmailTemplate/List.html
+++ b/Resources/Private/Templates/EmailTemplate/List.html
@@ -31,14 +31,14 @@
 			<f:for each="{templates}" as="template" iteration="iter">
 				<tr class="db_list_normal {f:if(condition:iter.isLast, then: 'lastcol')} {f:if(condition:iter.isFirst, then: 'firstcol')}">
 					<td nowrap="nowrap" class="col-icon">
-						<f:link.action action="edit" arguments="{emailTemplate: template}">
-							<f:be.buttons.icon icon="actions-document-open" title="Edit this template" />
+						<f:link.action action="edit" arguments="{emailTemplate: template}" title="Edit this template">
+							<core:icon identifier="actions-document-open" />
 						</f:link.action>
 					</td>
 
 					<td nowrap="nowrap" class="col-icon">
-						<f:link.action action="delete" arguments="{emailTemplate: template}">
-							<f:be.buttons.icon icon="actions-edit-delete" title="Delete this template" />
+						<f:link.action action="delete" arguments="{emailTemplate: template}" title="Delete this template">
+							<core:icon identifier="actions-edit-delete" />
 						</f:link.action>
 					</td>
 
@@ -58,5 +58,7 @@
 </f:section>
 
 <f:section name="menu-primary">
-	<f:be.buttons.icon uri="{f:uri.action(action:'selectTemplate')}" icon="actions-document-new" title="Create New Email Template" />
+	<f:link.action action="selectTable" title="Create new template">
+		<core:icon identifier="actions-document-new" />
+	</f:link.action>
 </f:section>
