[B] Fix bug in email selection

--- a/Resources/Private/Templates/EmailTemplate/List.html
+++ b/Resources/Private/Templates/EmailTemplate/List.html
@@ -58,7 +58,7 @@
 </f:section>
 
 <f:section name="menu-primary">
-	<f:link.action action="selectTable" title="Create new template">
+	<f:link.action action="selectTemplate" title="Create new template">
 		<core:icon identifier="actions-document-new" />
 	</f:link.action>
 </f:section>
