[C] Fix backend modules for v9

--- a/Resources/Private/Layouts/Backend.html
+++ b/Resources/Private/Layouts/Backend.html
@@ -1,10 +1,4 @@
-<f:be.container
-		pageTitle="foo"
-		enableClickMenu="false"
-		loadExtJs="false"
-		loadExtJsTheme="false"
-		enableExtJsDebug="false">
-
+<f:be.container>
 	<div class="typo3-fullDoc">
 		<div id="typo3-docheader">
 			<div id="typo3-docheader-row1">
@@ -23,5 +17,4 @@
 			</div>
 		</div>
 	</div>
-
 </f:be.container>
